# explore-cloud-haskell

./: .gitignore  README.org  cabal.project  flake.nix
cloud-haskell-chat/: CHANGELOG.md  README.md  cloud-haskell-chat.cabal  hie.yaml
cloud-haskell-chat/client/: Main.hs
cloud-haskell-chat/server/: Main.hs
cloud-haskell-chat/src/: Client.hs  Logger.hs  Server.hs  Types.hs
cloud-haskell-chat/test/: Main.hs  Spec.hs
