cabal-version:       2.4
name:                cloud-haskell-chat
version:             0.1.0.0
synopsis:            cloud-haskell-chat to explore cloud-haskell.
description:         cloud-haskell-chat to explore cloud-haskell.
homepage:            https://github.com/hughjfchen/explore-cloud-haskell
bug-reports:         https://github.com/hughjfchen/explore-cloud-haskell/issues
license:             MIT
license-file:        LICENSE
author:              Hugh JF Chen
maintainer:          Hugh JF Chen <hugh.jf.chen@gmail.com>
copyright:           2024 Hugh JF Chen
category:            Network
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.6.6

source-repository head
  type:                git
  location:            https://github.com/hughjfchen/explore-cloud-haskell.git

common cloud-haskell-chat-options
  build-depends:       base >= 4.11.1.0 && < 5
                     , relude
                     , text
                     , bytestring
                     , mtl
                     , transformers
                     , containers
                     , unordered-containers
                     , exceptions
                     , aeson
                     , parsec
                     , filepath
                     , path
                     , path-io
                     , modern-uri
                     , uuid
                     , distributed-process
                     , distributed-process-async
                     , network-transport
                     , distributed-process-client-server
                     , distributed-process-extras
                     , distributed-process-simplelocalnet
                     , network
                     , network-transport-tcp
                     , binary

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
                     , relude

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveFunctor
                       DeriveDataTypeable
                       DeriveGeneric
                       DeriveLift
                       DerivingStrategies
                       FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       DerivingStrategies
                       InstanceSigs
                       DataKinds
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       OverloadedStrings
                       OverloadedLabels
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       ViewPatterns
                       PatternSynonyms
                       QuasiQuotes
                       TemplateHaskell

library
  import:              cloud-haskell-chat-options
  hs-source-dirs:      src
  exposed-modules:     Types
                     , Logger
                     , Server
                     , Client

executable cloud-haskell-chat-server
  import:              cloud-haskell-chat-options
  hs-source-dirs:      server
  main-is:             Main.hs
  other-modules:       Paths_cloud_haskell_chat
  build-depends:       cloud-haskell-chat
                     , optparse-applicative ^>= 0.16.1.0
                     , fast-logger
                     , time
                     , unliftio
                     , directory
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable cloud-haskell-chat-client
  import:              cloud-haskell-chat-options
  hs-source-dirs:      client
  main-is:             Main.hs
  other-modules:       Paths_cloud_haskell_chat
  build-depends:       cloud-haskell-chat
                     , optparse-applicative ^>= 0.16.1.0
                     , fast-logger
                     , time
                     , unliftio
                     , directory
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite cloud-haskell-chat-test
  import:              cloud-haskell-chat-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Paths_cloud_haskell_chat
  build-depends:       cloud-haskell-chat
                     , hspec
                     , hedgehog
                     , hspec-hedgehog
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark cloud-haskell-chat-benchmark
  import:              cloud-haskell-chat-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , cloud-haskell-chat
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
